project with all solution